Updates Made in this commit: .) MyJDBC.java updates and get methods updated
Next To Do:
.)

Previous Updates:
.)

Errors
.)